# OPT

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
consumers/: consumer.py  faust_stream.py  ksql.py  server.py  topic_check.py
consumers/models/: line.py  weather.py
producers/: connector.py  simulation.py
producers/models/: line.py  producer.py  station.py  turnstile.py  weather.py
producers/models/schemas/: arrival_key.json  arrival_value.json  turnstile_key.json  turnstile_value.json  weather_key.json  weather_value.json
scratch/: conn_log.txt  docker-compose-kscli.yml  faust_log.txt  kafkacli4validation.txt  list.txt  setup.sh
tests/: conftest.py  test_comps.py
