[tool.poetry]
name = "OPT"
version = "0.1.0"
description = "App to track Trains and passengers moving in the commute systems"
authors = ["Srinivasa Kanduru <skanduru@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "*"
uvicorn = "*"
python-dotenv = "^0.19.2"
pytest-asyncio = "^0.17.2"
pandas = "^1.4.0"
confluent-kafka = "^1.8.2"
avro = "^1.11.0"
fastavro = "^1.4.9"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
# asyncio_mode = "auto"
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
mypy = "*"
freezegun = "^1.1.0"
black = "^21.5b1"
requests = "*"
asynctest = "^0.13.0"
aiohttp = "^3.8.1"

[tool.poetry.scripts]
f5tt = "app.api.main:start"

[tool.pytest.ini_options]
asyncio_mode = "strict"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-p tests"
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
